--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,4 @@ Imports: FME (>= 1.3.2),
          bioinactivation (>= 1.1.2)
 Suggests: knitr (>= 1.9),
           testthat (>= 0.9.1)
+VignetteBuilder: knitr
