--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,30 @@
 Package: bioOED
 Type: Package
-Title: Sensitivity Analysis and Optimum Experiment Design for microbial inactivation
-Version: 0.0.1
+Title: Sensitivity Analysis and Optimum Experiment Design for Microbial
+    Inactivation
+Version: 0.1.1
 Date: 2017-03-12
 Authors@R: c(person("Alberto", "Garre", email = "garre.alberto@gmail.com", role = c("aut", "cre")),
              person("Jose Lucas", "Penalver", email = "", role = "aut"),
              person("Pablo S.", "Fernandez", email = "pablo.fernandez@upct.es", role = "aut"),
              person("Jose A.", "Egea", email = "josea.egea@upct.es", role = "aut")
              )
-Description: Extends the bioinactivation package with functions for Sensitivity Analysis and Optimum Experient Design.
+Description: Extends the bioinactivation package with functions for Sensitivity
+    Analysis and Optimum Experiment Design.
 License: GPL-3
 LazyData: TRUE
-Imports: FME (>= 1.3.2),
-         bioinactivation (>= 1.1.2),
-         corrplot(>= 0.73)
-Suggests: knitr (>= 1.9),
-          testthat (>= 0.9.1)
+Imports:
+    FME (>= 1.3.2),
+    bioinactivation (>= 1.1.2),
+    corrplot(>= 0.73),
+    dplyr (>= 0.5.0),
+    ggplot2 (>= 2.1.0),
+    MEIGOR (>= 1.0.0),
+    stats (>= 3.3.2),
+    graphics(>= 3.3.2)
+Suggests:
+    knitr (>= 1.9),
+    testthat (>= 0.9.1),
+    rmarkdown
 VignetteBuilder: knitr
+RoxygenNote: 5.0.1
