--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bioOED
 Type: Package
 Title: Sensitivity Analysis and Optimum Experiment Design for Microbial
     Inactivation
-Version: 0.1.2.90000
+Version: 0.1.4
 Date: 2017-03-12
 Authors@R: c(person("Alberto", "Garre", email = "garre.alberto@gmail.com", role = c("aut", "cre")),
              person("Jose Lucas", "Penalver", email = "", role = "aut"),
@@ -19,12 +19,14 @@ Imports:
     corrplot(>= 0.73),
     dplyr (>= 0.5.0),
     ggplot2 (>= 2.1.0),
-    MEIGOR (>= 1.0.0),
     stats (>= 3.3.2),
-    graphics(>= 3.3.2)
+    graphics(>= 3.3.2),
+    MEIGOR (>= 1.0.0)
 Suggests:
     knitr (>= 1.9),
     testthat (>= 0.9.1),
     rmarkdown
+Remotes:
+    bioc::3.6/MEIGOR
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
