Add documentation for the functions: OED_isothermal.R, OED_isothermal_limit.R and isothermal_sensitivities.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ export(isothermal_OED_limit)
 export(isothermal_sensitivities)
 export(optimize_refTemp)
 export(sensitivity_inactivation)
+import(tidyselect)
+import(tidyverse)
 importFrom(FME,sensFun)
 importFrom(MEIGOR,MEIGO)
 importFrom(bioinactivation,predict_inactivation)
