--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bioOED
 Type: Package
 Title: Sensitivity Analysis and Optimum Experiment Design for Microbial
     Inactivation
-Version: 0.1.4.999
+Version: 0.1.5.999
 Date: 2018-04-17
 Authors@R: c(person("Alberto", "Garre", email = "garre.alberto@gmail.com", role = c("aut", "cre")),
              person("Jose Lucas", "Penalver", email = "", role = "aut"),
@@ -23,7 +23,9 @@ Imports:
     graphics(>= 3.3.2),
     MEIGOR (>= 1.0.0),
     rlang (>= 0.1.6),
-    tidyr (>= 0.7.2)
+    tidyr (>= 0.7.2),
+    tidyselect (>= 0.2.4),
+    tidyverse (>= 1.2.1)
 Suggests:
     knitr (>= 1.9),
     testthat (>= 0.9.1),
