--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,16 @@ S3method(plot,parCorrelation)
 export(calculate_FIM)
 export(calculate_isothermal_FIM)
 export(calculate_pars_correlation)
+export(criterium_A_iso)
+export(criterium_Amod_iso)
+export(criterium_D_iso)
+export(criterium_E_iso)
+export(criterium_Emod_iso)
+export(detFIM)
+export(detection_bigelow)
+export(detection_mafart)
+export(detection_peleg)
+export(get_detection)
 export(get_isothermal_correlation)
 export(inactivation_OED)
 export(inactivation_OED_penalty)
@@ -23,11 +33,14 @@ importFrom(bioinactivation,predict_inactivation)
 importFrom(corrplot,corrplot)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,select_)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_contour)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
@@ -36,6 +49,7 @@ importFrom(graphics,plot)
 importFrom(rlang,.data)
 importFrom(stats,approx)
 importFrom(stats,cor)
+importFrom(stats,na.omit)
 importFrom(stats,optim)
 importFrom(stats,runif)
 importFrom(tidyr,"%>%")
