--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,12 @@ Package: bioOED
 Type: Package
 Title: Sensitivity Analysis and Optimum Experiment Design for Microbial
     Inactivation
-Version: 0.1.5.999
-Date: 2018-04-17
-Authors@R: c(person("Alberto", "Garre", email = "garre.alberto@gmail.com", role = c("aut", "cre")),
-             person("Jose Lucas", "Penalver", email = "", role = "aut"),
+Version: 0.2.1
+Date: 2019-07-17
+
+Maintainer: Alberto Garre <garre.alberto@gmail.com>
+Authors@R: c(person("Jose Lucas", "Penalver", email = "joselucasps@gmail.com", role = "aut"),
+	     person("Alberto", "Garre", email = "garre.alberto@gmail.com", role = c("aut", "cre")),
              person("Pablo S.", "Fernandez", email = "pablo.fernandez@upct.es", role = "aut"),
              person("Jose A.", "Egea", email = "josea.egea@upct.es", role = "aut")
              )
@@ -32,4 +34,4 @@ Suggests:
     rmarkdown
 VignetteBuilder: knitr
 Encoding: UTF-8
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
